# cpp-projects

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.ps1  main.cpp
LinearAlgebra/: CMakeLists.txt  README.md
LinearAlgebra/include/LinearAlgebra/: Functions.h  Functions.tpp  LinAlg.h  LinAlgFwds.h  Matrix.h  Matrix.tpp  MatrixErrors.h  Shape.h  Vector.h  Vector.tpp
LinearAlgebra/src/: Shape.cpp
MachineLearning/CustomNeuralNetwork/: CMakeLists.txt  README.md  readme2.md
MachineLearning/CustomNeuralNetwork/include/CustomNeuralNetwork/: DenseLayer.h  NN.h
MachineLearning/CustomNeuralNetwork/include/CustomNeuralNetwork/ActivationFunctions/: ActivationFunctions.h  BaseActivationFunction.h  ReLUActivationFunction.h  SigmoidActivationFunction.h  TanhActivationFunction.h
MachineLearning/CustomNeuralNetwork/include/CustomNeuralNetwork/InitializationFunctions/: BaseInitializationFunction.h  HeInitializationFunction.h  InitializationFunctions.h  RandomInitializationFunction.h  XavierInitializationFunction.h
MachineLearning/CustomNeuralNetwork/include/CustomNeuralNetwork/Layers/: BaseLayer.h  Layers.h
MachineLearning/CustomNeuralNetwork/include/CustomNeuralNetwork/LossFunctions/: BaseLossFunction.h  LossFunctions.h  MeanSquaredErrorLossFunction.h
MachineLearning/CustomNeuralNetwork/include/CustomNeuralNetwork/Optimizers/: AdaptativeMomentOptimizer.h  BaseOptimizer.h  Optimizers.h  StochasticGDOptimizer.h
MachineLearning/CustomNeuralNetwork/src/: DenseLayer.cpp  NN.cpp
MachineLearning/CustomNeuralNetwork/src/ActivationFunctions/: BaseActivationFunction.cpp  ReLUActivationFunction.cpp  SigmoidActivationFunction.cpp  TanhActivationFunction.cpp
MachineLearning/CustomNeuralNetwork/src/InitializationFunctions/: BaseInitializationFunction.cpp  HeInitializationFunction.cpp  RandomInitializationFunction.cpp  XavierInitializationFunction.cpp
MachineLearning/CustomNeuralNetwork/src/LossFunctions/: BaseLossFunction.cpp  MeanSquaredErrorLossFunction.cpp
MachineLearning/CustomNeuralNetwork/src/Optimizers/: AdaptativeMomentOptimizer.cpp  BaseOptimizer.cpp  StochasticGDOptimizer.cpp
Utils/include/: utils.h
Utils/include/Utils/: benchmark.h  print.h
Utils/src/: benchmark.cpp
models/: XorModel.txt
